--- a/manifest.json
+++ b/manifest.json
@@ -37,11 +37,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": [
-        "images/MoodleModifier-logo-icon48.png",
-        "images/MoodleModifier-logo-icon128.png",
-        "images/MoodleModifirer-header.png"
-      ],
+      "resources": ["images/*"],
       "matches": ["*://moodle2022.wakayama-u.ac.jp/*"],
       "extesion_ids": ["lfkadlbamkccpjanljplcfjmkafapnia"]
     }
