--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "moodle modifier",
     "description": "Login automatically, change the layout of Moodle, and support dark mode",
-    "version": "1.4.2",
+    "version": "1.5.0",
 
     "icons": {
         "48": "images/MoodleModifier-logo-icon48.png",
@@ -16,44 +16,40 @@
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "matches": ["*://moodle2022.wakayama-u.ac.jp/*"],
-            "run_at": "document_start",
-            "css": [
-                "content_scripts/css/dark_theme.css",
-                "content_scripts/css/calendar.css"
-            ],
+            "css": ["content_scripts/css/dark_theme.css"],
             "js": [
                 "content_scripts/checkDarkMode.js",
                 "content_scripts/switchLogo.js",
                 "content_scripts/re-layout.js",
                 "content_scripts/addCalendar.js"
-            ]
+            ],
+            "run_at": "document_start"
         },
         {
             "exclude_matches": [
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
-            "matches": ["*://moodle2022.wakayama-u.ac.jp/*"],
-            "run_at": "document_end",
-            "css": ["content_scripts/css/show_logo_image_again.css"]
+            "matches": ["*://moodle2022.wakayama-u.ac.jp/2022/"],
+            "css": [
+                "content_scripts/css/calendar.css",
+                "content_scripts/css/show_logo_image_again.css",
+                "content_scripts/css/edit_btn.css"
+            ],
+            "js": ["content_scripts/editMyCourse.js"],
+            "run_at": "document_start"
         },
         {
             "matches": [
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
-            "run_at": "document_start",
             "css": ["content_scripts/css/dark_theme_login.css"],
             "js": [
                 "content_scripts/checkDarkMode.js",
                 "content_scripts/loginByCollegeID.js"
-            ]
-        },
-        {
-            "matches": ["*://moodle2022.wakayama-u.ac.jp/2022/"],
-            "css": ["content_scripts/css/edit_btn.css"],
-            "js": ["content_scripts/editMyCourse.js"],
-            "run_at": "document_end"
+            ],
+            "run_at": "document_start"
         }
     ],
 
