--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "moodle modifier",
     "description": "便利な機能を詰め込んだ moodle 用の拡張機能；自動ログイン、提出物が記載されたカレンダーの追加、必要のない講義の非表示、ダークモード対応、講義の並び替えなど",
-    "version": "1.6.1",
+    "version": "1.6.2",
 
     "icons": {
         "48": "images/MoodleModifier-logo-icon48.png",
@@ -50,7 +50,7 @@
             "css": ["content_scripts/css/dark_theme_login.css"],
             "js": [
                 "content_scripts/checkDarkMode.js",
-                "content_scripts/loginByCollegeID.js"
+                "content_scripts/login.js"
             ],
             "run_at": "document_start"
         }
