--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
     "manifest_version": 3,
     "name": "moodle modifier",
     "description": "便利な機能を詰め込んだ moodle 用の拡張機能；自動ログイン、提出物が記載されたカレンダーの追加、必要のない講義の非表示、ダークモード対応、講義の並び替えなど",
-    "version": "1.6.4",
+    "version": "1.6.5",
 
     "icons": {
-        "48": "images/MoodleModifier-logo-icon48.png",
-        "128": "images/MoodleModifier-logo-icon128.png"
+        "48": "src/images/MoodleModifier-logo-icon48.png",
+        "128": "src/images/MoodleModifier-logo-icon128.png"
     },
 
     "content_scripts": [
@@ -16,13 +16,8 @@
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "matches": ["*://moodle2022.wakayama-u.ac.jp/*"],
-            "css": ["content_scripts/css/dark_theme.css"],
-            "js": [
-                "content_scripts/checkDarkMode.js",
-                "content_scripts/switchLogo.js",
-                "content_scripts/re-layout.js",
-                "content_scripts/addCalendar.js"
-            ],
+            "css": ["src/css/dark_theme.css"],
+            "js": ["dist/main.bundle.js"],
             "run_at": "document_start"
         },
         {
@@ -32,14 +27,11 @@
             ],
             "matches": ["*://moodle2022.wakayama-u.ac.jp/2022/"],
             "css": [
-                "content_scripts/css/calendar.css",
-                "content_scripts/css/show_logo_image_again.css",
-                "content_scripts/css/edit_btn.css"
+                "src/css/calendar.css",
+                "src/css/show_logo_image_again.css",
+                "src/css/edit_btn.css"
             ],
-            "js": [
-                "content_scripts/editMyCourse.js",
-                "content_scripts/reorderCourses.js"
-            ],
+            "js": ["dist/editMode.bundle.js"],
             "run_at": "document_start"
         },
         {
@@ -47,11 +39,8 @@
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
-            "css": ["content_scripts/css/dark_theme_login.css"],
-            "js": [
-                "content_scripts/login.js",
-                "content_scripts/checkDarkMode.js"
-            ],
+            "css": ["src/css/dark_theme_login.css"],
+            "js": ["dist/login.bundle.js"],
             "run_at": "document_start"
         }
     ],
@@ -60,14 +49,14 @@
     "host_permissions": ["*://moodle2022.wakayama-u.ac.jp/*"],
 
     "action": {
-        "default_icon": "images/MoodleModifier-logo-icon128.png",
+        "default_icon": "src/images/MoodleModifier-logo-icon128.png",
         "default_title": "moodle modifier",
-        "default_popup": "popup/advatise_something.html"
+        "default_popup": "src/popup/advatise_something.html"
     },
 
     "web_accessible_resources": [
         {
-            "resources": ["images/*"],
+            "resources": ["src/images/*"],
             "matches": ["*://moodle2022.wakayama-u.ac.jp/*"]
         }
     ]
