--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "publish": "webpack --mode production && node zip.js $1"
     },
     "devDependencies": {
+        "@types/chrome": "^0.0.200",
         "bestzip": "^2.2.1",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
     }
