add name to package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "moodle-modifier",
     "scripts": {
         "build": "webpack --mode development --stats-error-details",
         "watch": "webpack --mode development --watch",
