--- a/manifest.json
+++ b/manifest.json
@@ -11,27 +11,25 @@
 
     "content_scripts": [
         {
-            "exclude_matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
-            ],
-            "matches": ["*://moodle2022.wakayama-u.ac.jp/*"],
-            "css": ["src/css/dark_theme.css"],
-            "js": ["dist/main.bundle.js"],
-            "run_at": "document_start"
-        },
-        {
-            "exclude_matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
-            ],
             "matches": ["*://moodle2022.wakayama-u.ac.jp/2022/"],
             "css": [
+                "src/css/dark_theme.css",
                 "src/css/calendar.css",
                 "src/css/show_logo_image_again.css",
                 "src/css/edit_btn.css"
             ],
-            "js": ["dist/editMode.bundle.js"],
+            "js": ["dist/topPage.bundle.js", "dist/editMode.bundle.js"],
+            "run_at": "document_start"
+        },
+        {
+            "exclude_matches": [
+                "*://moodle2022.wakayama-u.ac.jp/2022/",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
+            ],
+            "matches": ["*://moodle2022.wakayama-u.ac.jp/2022/*"],
+            "css": ["src/css/dark_theme.css"],
+            "js": ["dist/notTopPage.bundle.js"],
             "run_at": "document_start"
         },
         {
