--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
     "content_scripts": [
         {
             "matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/",
-                "*://moodle2023.wakayama-u.ac.jp/2023/"
+                "*://moodle2022.wakayama-u.ac.jp/2023/",
+                "*://moodle2022.wakayama-u.ac.jp/2022/"
             ],
             "css": [
                 "src/css/dark_theme.css",
@@ -26,16 +26,16 @@
         },
         {
             "exclude_matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*",
                 "*://moodle2023.wakayama-u.ac.jp/2023/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
-                "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*"
+                "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
+                "*://moodle2022.wakayama-u.ac.jp/2022/",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/*",
-                "*://moodle2023.wakayama-u.ac.jp/2023/*"
+                "*://moodle2023.wakayama-u.ac.jp/2023/*",
+                "*://moodle2022.wakayama-u.ac.jp/2022/*"
             ],
             "css": ["src/css/dark_theme.css"],
             "js": ["dist/notTopPage.bundle.js"],
@@ -43,10 +43,11 @@
         },
         {
             "matches": [
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*",
+                "*://moodle2023.wakayama-u.ac.jp",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
-                "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*"
+                "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "css": ["src/css/dark_theme_login.css"],
             "js": ["dist/login.bundle.js"],
@@ -56,8 +57,8 @@
 
     "permissions": ["storage", "declarativeNetRequest"],
     "host_permissions": [
-        "*://moodle2022.wakayama-u.ac.jp/*",
-        "*://moodle2023.wakayama-u.ac.jp/*"
+        "*://moodle2023.wakayama-u.ac.jp/*",
+        "*://moodle2022.wakayama-u.ac.jp/*"
     ],
 
     "declarative_net_request": {
@@ -80,8 +81,8 @@
         {
             "resources": ["src/images/*"],
             "matches": [
-                "*://moodle2022.wakayama-u.ac.jp/*",
-                "*://moodle2023.wakayama-u.ac.jp/*"
+                "*://moodle2023.wakayama-u.ac.jp/*",
+                "*://moodle2022.wakayama-u.ac.jp/*"
             ]
         }
     ]
