--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "moodle modifier",
     "description": "便利な機能を詰め込んだ moodle 用の拡張機能；自動ログイン、提出物が記載されたカレンダーの追加、必要のない講義の非表示、ダークモード対応、講義の並び替え、文字数カウンタの追加など",
-    "version": "1.8.0.",
+    "version": "1.8.0",
 
     "icons": {
         "48": "src/images/MoodleModifier-logo-icon48.png",
@@ -43,7 +43,7 @@
         },
         {
             "matches": [
-                "*://moodle2023.wakayama-u.ac.jp",
+                "*://moodle2023.wakayama-u.ac.jp/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
