modified manifest and rules.json to support 2024ver #83

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "moodle modifier",
     "description": "便利な機能を詰め込んだ moodle 用の拡張機能；自動ログイン、提出物が記載されたカレンダーの追加、必要のない講義の非表示、ダークモード対応、講義の並び替え、文字数カウンタの追加など",
-    "version": "1.8.0",
+    "version": "1.8.1",
 
     "icons": {
         "48": "src/images/MoodleModifier-logo-icon48.png",
@@ -12,6 +12,7 @@
     "content_scripts": [
         {
             "matches": [
+                "*://moodle2024.wakayama-u.ac.jp/2024/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/",
                 "*://moodle2022.wakayama-u.ac.jp/2022/"
             ],
@@ -26,6 +27,9 @@
         },
         {
             "exclude_matches": [
+                "*://moodle2024.wakayama-u.ac.jp/2024/",
+                "*://moodle2024.wakayama-u.ac.jp/2024/login/index_form.html",
+                "*://moodle2024.wakayama-u.ac.jp/2024/login/index_form.html?*",
                 "*://moodle2023.wakayama-u.ac.jp/2023/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
@@ -34,6 +38,7 @@
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "matches": [
+                "*://moodle2024.wakayama-u.ac.jp/2024/*",
                 "*://moodle2023.wakayama-u.ac.jp/2023/*",
                 "*://moodle2022.wakayama-u.ac.jp/2022/*"
             ],
@@ -43,6 +48,9 @@
         },
         {
             "matches": [
+                "*://moodle2024.wakayama-u.ac.jp/",
+                "*://moodle2024.wakayama-u.ac.jp/2024/login/index_form.html",
+                "*://moodle2024.wakayama-u.ac.jp/2024/login/index_form.html?*",
                 "*://moodle2023.wakayama-u.ac.jp/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
@@ -57,6 +65,7 @@
 
     "permissions": ["storage", "declarativeNetRequest"],
     "host_permissions": [
+        "*://moodle2024.wakayama-u.ac.jp/",
         "*://moodle2023.wakayama-u.ac.jp/*",
         "*://moodle2022.wakayama-u.ac.jp/*"
     ],
@@ -81,6 +90,7 @@
         {
             "resources": ["src/images/*"],
             "matches": [
+                "*://moodle2024.wakayama-u.ac.jp/*",
                 "*://moodle2023.wakayama-u.ac.jp/*",
                 "*://moodle2022.wakayama-u.ac.jp/*"
             ]
