add proper 2022 URL pattern

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
             "matches": [
                 "*://moodle2024.wakayama-u.ac.jp/2024/",
                 "*://moodle2023.wakayama-u.ac.jp/2023/",
-                "*://moodle2022.wakayama-u.ac.jp/2022/"
+                "*://moodle2022.wakayama-u.ac.jp/2022/",
+                "*://moodle.wakayama-u.ac.jp/2022/"
             ],
             "css": [
                 "src/css/dark_theme.css",
@@ -35,12 +36,16 @@
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
                 "*://moodle2022.wakayama-u.ac.jp/2022/",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*",
+                "*://moodle.wakayama-u.ac.jp/2022/",
+                "*://moodle.wakayama-u.ac.jp/2022/login/index_form.html",
+                "*://moodle.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "matches": [
                 "*://moodle2024.wakayama-u.ac.jp/2024/*",
                 "*://moodle2023.wakayama-u.ac.jp/2023/*",
-                "*://moodle2022.wakayama-u.ac.jp/2022/*"
+                "*://moodle2022.wakayama-u.ac.jp/2022/*",
+                "*://moodle.wakayama-u.ac.jp/2022/"
             ],
             "css": ["src/css/dark_theme.css"],
             "js": ["dist/notTopPage.bundle.js"],
@@ -55,7 +60,9 @@
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html",
                 "*://moodle2023.wakayama-u.ac.jp/2023/login/index_form.html?*",
                 "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html",
-                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*"
+                "*://moodle2022.wakayama-u.ac.jp/2022/login/index_form.html?*",
+                "*://moodle.wakayama-u.ac.jp/2022/login/index_form.html",
+                "*://moodle.wakayama-u.ac.jp/2022/login/index_form.html?*"
             ],
             "css": ["src/css/dark_theme_login.css"],
             "js": ["dist/login.bundle.js"],
@@ -67,7 +74,8 @@
     "host_permissions": [
         "*://moodle2024.wakayama-u.ac.jp/",
         "*://moodle2023.wakayama-u.ac.jp/*",
-        "*://moodle2022.wakayama-u.ac.jp/*"
+        "*://moodle2022.wakayama-u.ac.jp/*",
+        "*://moodle.wakayama-u.ac.jp/2022/"
     ],
 
     "declarative_net_request": {
@@ -92,7 +100,8 @@
             "matches": [
                 "*://moodle2024.wakayama-u.ac.jp/*",
                 "*://moodle2023.wakayama-u.ac.jp/*",
-                "*://moodle2022.wakayama-u.ac.jp/*"
+                "*://moodle2022.wakayama-u.ac.jp/*",
+                "*://moodle.wakayama-u.ac.jp/2022/"
             ]
         }
     ]
